# theCore

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  README.md  README.rst  build_api.cmake  config.json  core.dox  default.nix  style.md  thecore.schema.json
arch/: CMakeLists.txt
arch/arm_cm/: CMakeLists.txt  arch.cpp  execution.cpp  gcc_arm_cm.ld  startup_arm_cm.S  startup_arm_cm0.S
dev/: CMakeLists.txt  config.json  dev.py  dev.schema.json
dev/bus/: CMakeLists.txt
dev/bus/tests/: bus_unit.cpp  serial_unit.cpp
dev/cs43l22/: CMakeLists.txt  config.json
dev/cs43l22/templates/: cs43l22_cfg.in.hpp
dev/export/dev/: generated.hpp
dev/hc10/: CMakeLists.txt
dev/hc10/tests/: hc10_unit.cpp
dev/hm10/: CMakeLists.txt  config.json
dev/hm10/templates/: hm10_cfg.in.hpp
dev/hm10/tests/: hm10_unit.cpp
dev/pcd8544/: CMakeLists.txt
dev/sdspi/: CMakeLists.txt  config.json  sdspi.schema.json
dev/sdspi/templates/: sdspi_cfg.in.hpp
dev/sensor/: CMakeLists.txt  config.json
dev/sensor/bh1750/: CMakeLists.txt
dev/sensor/fc28/: CMakeLists.txt
dev/sensor/htu21/: CMakeLists.txt
dev/sensor/htu21d/: CMakeLists.txt  config.json
doc/: CMakeLists.txt  doxygen.cfg.in  mainpage.dox
doc/sphinx/: versioning_cmd.txt
doc/sphinx/source/: arch.rst  community.rst  conf.py  contents.rst  credits.rst  docs.rst  drivers.rst  examples.rst  faq.rst  guides.rst  index.rst  os_layer.rst  platforms.rst  project_structure.rst  readme.rst  testing.rst  utilities.rst
doc/sphinx/source_title/: conf.py  index.rst
examples/cs43l22_audio/: CMakeLists.txt  README.md  audio.inc  main.cpp  stm32f4_cs43l22.json  target.cpp  target.hpp
examples/hm10/: CMakeLists.txt  main.cpp  stm32f4_hm10.json
examples/host_hello/: CMakeLists.txt  README.md  host.json  main.cpp
examples/stm32f4_exti/: CMakeLists.txt  README.md  main.cpp  stm32f4_exti.json  target.cpp  target.hpp
examples/tm4c_fatfs/: CMakeLists.txt  README.md  main.cpp  target.json
examples/tm4c_led/: CMakeLists.txt  README.md  main.cpp  target.cpp  target.hpp  target_defs.json  tm4c_led.json
kernel/: CMakeLists.txt
kernel/freertos/: CMakeLists.txt  kernel_main.c  os.cpp  os.hpp
lib/: CMakeLists.txt  config.json  lib.py  lib.schema.json
lib/allocators/: CMakeLists.txt  alloc.cpp
lib/allocators/tests/: pool_base_unit.cpp  pool_main.cpp  pool_unit.cpp
lib/cmsis/: CMakeLists.txt  clang-cmsis.patch
lib/containers/: CMakeLists.txt
lib/containers/tests/: list_unit.cpp
lib/cpp/: CMakeLists.txt  arm_eabi.cpp  streams.cpp
lib/cpp/default/: CMakeLists.txt
lib/cpp/tests/: CMakeLists.txt  aux_unit.cpp  console_integrity.cpp  istream_unit.cpp  mock_device.hpp  ostream_unit.cpp  shared_unit.cpp
lib/debug/: CMakeLists.txt  assert.cpp
lib/emc/: CMakeLists.txt  isalpha.c  islower.c  isupper.c  memcpy.c  memmove.c  memset.c  strchr.c  strcmp.c  strlen.c  tolower.c
lib/emc/export/: ctype.h  string.h
lib/emc/tests/: memset_unit.cpp
lib/export/lib/: generated.hpp
lib/freertos/: CMakeLists.txt  FreeRTOSConfig.h
lib/fs/: CMakeLists.txt  config.json  dir_descriptor.cpp  dir_inode.cpp  file_descriptor.cpp  file_inode.cpp  filehandle.cpp  fs.cpp  fs.schema.json  inode.cpp  inode_ptr.cpp
lib/fs/fat/: CMakeLists.txt  dir.cpp  dir_inode.cpp  fat.cpp  file.cpp  file_inode.cpp  inode.cpp  path.hpp  pffconf.h
lib/fs/templates/: fs_cfg.in.hpp  fs_defines.in.h
lib/fs/tests/: fs_unit.cpp
lib/kexx_drv/: CMakeLists.txt
lib/newlib/: CMakeLists.txt  stubs.c  stubs.cpp
lib/particle_firmware/: CMakeLists.txt
lib/stm32-spl/: CMakeLists.txt  stm32f4xx_spl.cmake  stm32l1xx_spl.cmake
lib/thread/: CMakeLists.txt  lock_guard.cpp  thread_api.cmake
lib/thread/common/: CMakeLists.txt  lock_guard.cpp  mutex.cpp  semaphore.cpp  spinlock.cpp
lib/thread/default/: CMakeLists.txt
lib/thread/empty/: CMakeLists.txt  mutex.cpp  semaphore.cpp
lib/thread/freertos/: CMakeLists.txt  mutex.cpp  os.cpp  semaphore.cpp  signal.cpp  thread.cpp  utils.cpp
lib/thread/no_os/: CMakeLists.txt  mutex.cpp  semaphore.cpp  spinlock.cpp
lib/thread/posix/: CMakeLists.txt  mutex.cpp  semaphore.cpp  thread.cpp
lib/thread/std_host/: CMakeLists.txt  mutex.cpp  semaphore.cpp  thread.cpp
lib/thread/tests/: semaphore_unit.cpp  thread_unit.cpp
lib/ti-tivaware/: CMakeLists.txt  debug_stubs.cpp
lib/types/: CMakeLists.txt  err.cpp
lib/unity/: CMakeLists.txt  unity_stubs.cpp
lib/utils/: CMakeLists.txt  assert.cpp  err.cpp  version.cpp.in  version.in.cpp
lib/utils/export/: version.hpp
lib/utils/tests/: utils_unit.cpp
platform/: CMakeLists.txt
platform/common/: CMakeLists.txt  common.py  compiler.cmake  irq.cpp  linker.cmake
platform/common/bus/: CMakeLists.txt
platform/common/i2c/: CMakeLists.txt
platform/common/pin/: CMakeLists.txt
platform/common/spi/: CMakeLists.txt
platform/common/tests/: mmio_unit.cpp
platform/common/usart/: CMakeLists.txt
platform/host/: CMakeLists.txt  console.cpp  platform.json  validate.py
platform/host/schemas/: host.schema.json
platform/host/templates/: defines.in.hpp  generated.in.hpp
platform/ke02/: CMakeLists.txt  console.cpp  mcu_cfg.cmake  platform.cpp
platform/ke02/schemas/: ke02.schema.json
platform/ke02/templates/: defines.in.hpp  uart_cfg.in.hpp
platform/particle_electron/: CMakeLists.txt  platform.cpp  platform_api.cmake  uart.cpp  user_side.cpp
platform/platform_stub/: CMakeLists.txt  mcu_cfg.cmake  platform.cpp
platform/stm32/: CMakeLists.txt  console.cpp  exti_manager.cpp  mcu_cfg.cmake  platform.cpp  platform.json  validate.py
platform/stm32f4xx/: CMakeLists.txt  bypass_console.cpp  console.cpp  exti_manager.cpp  irq_manager.cpp  mcu_cfg.cmake  platform-config.cmake  platform.cpp  utils.c
platform/stm32l1xx/: CMakeLists.txt  console.cpp  irq_manager.cpp  mcu_cfg.cmake  platform.cpp
platform/tm4c/: CMakeLists.txt  console.cpp  exti_manager.cpp  mcu_cfg.cmake  platform.cpp  platform.json
sys/: CMakeLists.txt  kernel_stubs.c  pin_cfgs.h  spi_cfgs.h  sys.cpp
sys/iodev/: iodev.hpp
sys/iowrap/: iowrap.hpp
(+562 files in other folders)
